# visie-teste-pratico

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: crud.py  database.py  main.py  models.py  schemas.py
frontend/front/: index.html  package-lock.json  package.json
frontend/front/src/: App.jsx
frontend/front/src/components/: DeleteButton.jsx  PersonItem.jsx  PersonList.jsx
frontend/front/src/hooks/: useGetPeopleData.jsx  useGetPersonDataById.jsx
frontend/front/src/pages/: Create.jsx  Details.jsx  Home.jsx  Update.jsx
