[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vítor Carrara <softwarecarrara@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
mariadb = "^1.1.8"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
